# world-generator

./: .gitignore  Cargo.toml  edits.ron  mappings.ron
examples/: run.rs
script-parser/: Cargo.toml
script-parser/examples/: test.rs
script-parser/src/: inc.rs  lib.rs  trainer.rs
script-parser/src/trainer/: party.rs
src/: edits.rs  lib.rs  main.rs  mapping.rs
src/map/: mod.rs  object.rs  wild.rs
src/serializable/: mod.rs
