[package]
name = "world-generator"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
firecore-world-builder = { git = "https://github.com/fiirecore-game/world", rev = "a6f7c7e", package = "firecore-world-builder" }
# firecore-world-builder = { path = "../../firecore/world/builder" }

script-parser = { path = "script-parser" }
serde = { version = "1", features = ["derive"] }
# reqwest = { version = "0.11", default-features = false, features = ["json", "blocking"] }
attohttpc = { version = "0.18", features = ["json"] }
tinystr = "0.4"
either = { version = "1", features = ["serde"] }
rayon = "1"
dashmap = { version = "5", features = ["serde", "rayon"] }
hashbrown = { version = "0.9", features = ["rayon"] }
rand = "0.8"

ron = "0.7"
serde_json = "1"
bincode = "1.3"

[workspace]
members = ["script-parser"]
